# oxide

./: CMakeLists.txt  README.md  compile_commands.json  main.cpp
include/: action.hpp  formalism.hpp  format.hpp  function.hpp  hash.hpp  lex.hpp  match.hpp  memory.hpp  parse.hpp  std.hpp  types.hpp
programs/: experimental.ox  experimental.oxide
source/: formalism.cpp  format.cpp  hash.cpp  lex.cpp  main.cpp  match.cpp  memory.cpp  parse.cpp
